--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,7 @@
     <title>IDEALIO</title>
   </head>
   <body>
+    <img src="/assets/images/landingImages/in_use/lpi-0.jpg" style="display: none"/>
     <div id="root"></div>
     
   </body>
